Creating initial layout

--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<html>
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<title>Page Title</title>
 </head>
 <body>
-	Hello World
+	<div class="pageHeaderFixed">
+		<a class="menuLink" href="index.html"><div>HOME</div></a>
+		<a class="menuLink" href="portfolio.html"><div>PORTFOLIO</div></a>
+		<a class="menuLink" href="aboutme.html"><div>ABOUT ME</div></a>
+		<a class="menuLink" href="contact.html"><div>CONTACT ME</div></a>
+	</div>
+	<div class="pageHeader">
+	</div>
+	<div class="body">
+		
+		<div class="pageLeftMenu">
+			pageLeftMenu
+		</div>
+		<div class="pageContent">
+			pageContent
+		</div>
+		<div class="pageRightMenu">
+			pageRightMenu
+		</div>
+	</div>
+	<div class="pageFooter">
+			pageFooter
+	</div>
 </body>
 </html>
