Added some hover characteristics on menus

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 </head>
 <body>
 	<div class="pageHeaderFixed">
-		<a class="menuLink" href="index.html"><div>HOME</div></a>
-		<a class="menuLink" href="portfolio.html"><div>PORTFOLIO</div></a>
-		<a class="menuLink" href="aboutme.html"><div>ABOUT ME</div></a>
-		<a class="menuLink" href="contact.html"><div>CONTACT ME</div></a>
+		<div class="menuContainer">
+			<div class="menuLinkDiv"><a class="menuLink" href="index.html">HOME</a></div>
+			<div class="menuLinkDiv"><a class="menuLink" href="portfolio.html">PORTFOLIO</a></div>
+			<div class="menuLinkDiv"><a class="menuLink" href="aboutme.html">ABOUT ME</a></div>
+			<div class="menuLinkDiv"><a class="menuLink" href="contact.html">CONTACT ME</a></div>
+		</div>	
 	</div>
 	<div class="pageHeader">
 	</div>
