Added some new design for homepage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		</div>
 		<div class="pageContent">
 			pageContent
+			<div class="divCircle">
+			</div>	
 		</div>
 		<div class="pageRightMenu">
 			pageRightMenu
