Added new animation features in homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 	<title>Page Title</title>
 </head>
 <body>
@@ -15,17 +15,14 @@
 	<div class="pageHeader">
 	</div>
 	<div class="body">
-		
-		<div class="pageLeftMenu">
-			pageLeftMenu
-		</div>
 		<div class="pageContent">
-			pageContent
+
 			<div class="divCircle">
-			</div>	
-		</div>
-		<div class="pageRightMenu">
-			pageRightMenu
+				<img class="portrait" src="images/myportrait-min-square2.jpg">
+				<div class="strip">
+					sdafasdf asdfasdf
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="pageFooter">
