added new div strip

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
 
 			<div class="divCircle">
 				<img class="portrait" src="images/myportrait-min-square2.jpg">
-				<div class="strip">
+				<div class="strip" id="strip1">
 					sdafasdf asdfasdf
+				</div>
+				<div class="strip" id="strip2">
+					sdafasdf
+				</div>
+				<div class="strip" id="strip3">
+					ASFD
 				</div>
 			</div>
 		</div>
