added new design for strip

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 					sdafasdf asdfasdf
 				</div>
 				<div class="strip" id="strip2">
-					sdafasdf
+					<span class="stripText">
+						sdafasdf	
+					</span>
 				</div>
 				<div class="strip" id="strip3">
 					ASFD
