Added new elements

--- a/index.html
+++ b/index.html
@@ -20,21 +20,34 @@
 			<div class="divCircle">
 				<img class="portrait" src="images/myportrait-min-square2.jpg">
 				<div class="strip" id="strip1">
-					sdafasdf asdfasdf
+					<span class="stripText">
+						&ensp;DEMS REY ROCA
+					</span>
 				</div>
 				<div class="strip" id="strip2">
 					<span class="stripText">
-						sdafasdf	
+						&ensp;Designer
 					</span>
 				</div>
 				<div class="strip" id="strip3">
-					ASFD
+					<span class="stripText">
+						&ensp;Coder
+					</span>
 				</div>
 			</div>
+			<div class="divInfo1">
+
+			</div>
+			<div class="divInfo2">
+
+			</div>
+			<div class="divInfo1">
+
+			</div>
 		</div>
+		
 	</div>
 	<div class="pageFooter">
-			pageFooter
 	</div>
 </body>
 </html>
