Added some personal info

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				</div>
 			</div>
 			<div class="divInfo1">
-
+				
+				<span class="infoUnskewed">I am a student at the Unversity of Southeastern Philippines taking up Bachelor of Science in Information Technology. Aspiring to be a developer, programmer and graphic designer. </span>
 			</div>
 			<div class="divInfo2">
 
