Educatio0n title and icon added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<div class="menuContainer">
 			<div class="menuLinkDiv"><a class="menuLink" href="index.html">HOME</a></div>
 			<div class="menuLinkDiv"><a class="menuLink" href="portfolio.html">PORTFOLIO</a></div>
-			<div class="menuLinkDiv"><a class="menuLink" href="aboutme.html">ABOUT ME</a></div>
 			<div class="menuLinkDiv"><a class="menuLink" href="contact.html">CONTACT ME</a></div>
 		</div>	
 	</div>
@@ -26,21 +25,23 @@
 				</div>
 				<div class="strip" id="strip2">
 					<span class="stripText">
-						&ensp;Designer
+						&ensp;DESIGNER
 					</span>
 				</div>
 				<div class="strip" id="strip3">
 					<span class="stripText">
-						&ensp;Coder
+						&ensp;CODER
 					</span>
 				</div>
 			</div>
 			<div class="divInfo1">
-				
-				<span class="infoUnskewed">I am a student at the Unversity of Southeastern Philippines taking up Bachelor of Science in Information Technology. Aspiring to be a developer, programmer and graphic designer. </span>
+				<span class="infoUnskewed1 infoText">I am a student at the Unversity of Southeastern Philippines taking up Bachelor of Science in Information Technology. Aspiring to be a developer, programmer and graphic designer. </span>
 			</div>
 			<div class="divInfo2">
-
+				<span class="infoUnskewed2">
+					<img class="bigIcon" src="images/icons/education.png">
+					<span class="infoTitle">Education</span>
+				</span>
 			</div>
 			<div class="divInfo1">
 
