added nef info for education

--- a/index.html
+++ b/index.html
@@ -38,13 +38,24 @@
 				<span class="infoUnskewed1 infoText">I am a student at the Unversity of Southeastern Philippines taking up Bachelor of Science in Information Technology. Aspiring to be a developer, programmer and graphic designer. </span>
 			</div>
 			<div class="divInfo2">
-				<span class="infoUnskewed2">
-					<img class="bigIcon" src="images/icons/education.png">
-					<span class="infoTitle">Education</span>
+
 				</span>
 			</div>
 			<div class="divInfo1">
-
+					<span class="infoUnskewed1">
+					<img class="bigIcon" src="images/icons/education.png">
+					<span class="infoTitle">Education</span>
+					<div class="schoolDiv">
+						<span class="education school">
+							Elementary @Don Manuel H. Gutierrez Sr. Elementary School
+						</span>
+						<span class="education sy">
+							JUN 2004 - MAR 2010
+						</span>
+						<span class="education schAdd">
+							Matina Crossing, Davao City
+						</span>
+					</div>	
 			</div>
 		</div>
 		
