Added new info for education

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 				</span>
 			</div>
 			<div class="divInfo1">
-					<span class="infoUnskewed1">
+				<span class="infoUnskewed1">
 					<img class="bigIcon" src="images/icons/education.png">
 					<span class="infoTitle">Education</span>
-					<div class="schoolDiv">
+					<div class="schoolDiv1">
 						<span class="education school">
 							Elementary @Don Manuel H. Gutierrez Sr. Elementary School
 						</span>
@@ -54,11 +54,25 @@
 						</span>
 						<span class="education schAdd">
 							Matina Crossing, Davao City
+						</span>	
+					</div>
+					<div class="schoolDiv2">
+						<span class="education school">
+							High School @Daniel R. Aguinaldo National High School
 						</span>
-					</div>	
+						<span class="education sy">
+							JUN 2011 - APR 2014
+						</span>
+						<span class="education schAdd">
+							Matina Crossing, Davao City
+						</span>	
+					</div>
+				</span>	
 			</div>
 		</div>
-		
+		<div id="portfolio">
+			
+		</div>
 	</div>
 	<div class="pageFooter">
 	</div>
