added new info for tertiary education

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
 							Matina Crossing, Davao City
 						</span>	
 					</div>
+					<div class="schoolDiv3">
+						<span class="education school">
+							Tertiary @University of Southeastern Philippine
+						</span>
+						<span class="education sy">
+							JUN 2014 - PRESENT
+						</span>
+						<span class="education schAdd">
+							Bo. Obrero, Davao City
+						</span>	
+					</div>
 				</span>	
 			</div>
 		</div>
