Portfolio link modified

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 <body>
 	<div class="pageHeaderFixed">
 		<div class="menuContainer">
-			<div class="menuLinkDiv"><a class="menuLink" href="index.html">HOME</a></div>
-			<div class="menuLinkDiv"><a class="menuLink" href="portfolio.html">PORTFOLIO</a></div>
+			<div class="menuLinkDiv"><a class="menuLink" href="#top" >HOME</a></div>
+			<div class="menuLinkDiv"><a class="menuLink" href="#portfolio">PORTFOLIO</a></div>
 			<div class="menuLinkDiv"><a class="menuLink" href="contact.html">CONTACT ME</a></div>
 		</div>	
 	</div>
 	<div class="pageHeader">
 	</div>
 	<div class="body">
-		<div class="pageContent">
-
+		<div class="pageContent" id="top">
 			<div class="divCircle">
 				<img class="portrait" src="images/myportrait-min-square2.jpg">
 				<div class="strip" id="strip1">
@@ -38,7 +37,7 @@
 				<span class="infoUnskewed1 infoText">I am a student at the Unversity of Southeastern Philippines taking up Bachelor of Science in Information Technology. Aspiring to be a developer, programmer and graphic designer. </span>
 			</div>
 			<div class="divInfo2">
-
+				<span>
 				</span>
 			</div>
 			<div class="divInfo1">
@@ -69,7 +68,7 @@
 					</div>
 					<div class="schoolDiv3">
 						<span class="education school">
-							Tertiary @University of Southeastern Philippine
+							Tertiary @University of Southeastern Philippines
 						</span>
 						<span class="education sy">
 							JUN 2014 - PRESENT
