added ROW1 for gallery

--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
 							JUN 2014 - PRESENT
 						</span>
 						<span class="education schAdd">
-							Bo. Obrero, Davao City
+ {							Bo. Obrero, Davao City
 						</span>	
 					</div>
 				</span>	
 			</div>
 		</div>
 		<div id="portfolio">
-			
+			<span class="portfolioTitle">Portfolio</span>
+			<div id="row1">
+			</div>
 		</div>
-	</div>
-	<div class="pageFooter">
 	</div>
 </body>
 </html>
