added new picture -picture1

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<div id="portfolio">
 			<span class="portfolioTitle">Portfolio</span>
 			<div id="row1">
+				<div class="pic1"></div>
 			</div>
 		</div>
 	</div>
