--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 			<span class="portfolioTitle">Portfolio</span>
 			<div id="row1">
 				<div class="pic1"></div>
+				<div class="pic2"></div>
+			</div>
 			</div>
 		</div>
 	</div>
