--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div id="row1">
 				<div class="pic1"></div>
 				<div class="pic2"></div>
-			</div>
+				<div class="pic3"></div>
 			</div>
 		</div>
 	</div>
