Pic5 and pci6 was added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
 			</div>
 			<div id="row2">
 				<div class="pic4"></div>
+				<div class="pic5"></div>
+				<div class="pic6"></div>
 			</div>
+
 		</div>
 	</div>
 </body>
