Remaining row and pic for portfolio was added on this page

--- a/index.html
+++ b/index.html
@@ -93,9 +93,15 @@
 				<div class="pic6"></div>
 			</div>
 			<div id="row3">
-
+				<div class="pic7"></div>
+				<div class="pic8"></div>
+				<div class="pic9"></div>
 			</div>
-
+			<div id="row4">
+				<div class="pic10"></div>
+				<div class="pic11"></div>
+				<div class="pic12"></div>
+			</div>
 		</div>
 	</div>
 </body>
